修改料理大会错误说明

--- a/food/festival.html
+++ b/food/festival.html
@@ -52,8 +52,8 @@
 <br>
 <br>参加・获胜：800P、参加者的友好度＋500
 <br>参加・失败：400P、参加者的友好度＋200
-<br>应援・获胜：800P、参加者的友好度＋500
-<br>应援・获胜：800P、参加者的友好度＋100
+<br>应援・获胜：200P、参加者的友好度＋500
+<br>应援・失败：100P、参加者的友好度＋100
 <br>
 <br><b>➤ 奖品</b>
 <br>
