修复二维码会挡住灰框的问题

--- a/default.html
+++ b/default.html
@@ -39,7 +39,7 @@
             <p>居民们的活动也很丰富。通过通讯交换可以去朋友牧场玩，或者通过擦肩通信来交换物品。</p>
         </div>
         <div class="feedback">
-            <div>
+            <div class="qrcode">
                 <img src="./qrcode_for_weixin.jpg">
             </div>
             <div class="fb">
