--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="牧场物语 双子村 WIKI - 矿石镇的攻略百科 | 又不是不能用的牧场物语系列游戏攻略">
     <meta name="keywords" content="牧场物语,双子村,牧場物語,ふたごの村,攻略,NDS,3DS">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61299624-4"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RGS2Q2FLSG"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -21,7 +21,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'UA-61299624-4');
+        gtag('config', 'G-RGS2Q2FLSG');
     </script>
 </head>
 
