首页侧边栏添加其他栏

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a class="aside_link" href="cook/other.html" target="home">其他</a>
                         <a class="aside_link" href="cook/festival.html" target="home">料理大会</a>
                     </div>
-                    <div class="aside_sub"></div>
+                    <div class="aside_sub">其他</div>
                     <div class="aside_title">
                         <a class="aside_link" href="other/alchemy.html" target="home">炼金术</a>
                         <a class="aside_link" href="other/dragonball.html" target="home">耀珠</a>
