修改河童卷的厨具为调味料

--- a/cook/staple.html
+++ b/cook/staple.html
@@ -343,7 +343,7 @@
                 </tr>
                 <tr>
                     <td>河童卷</td>
-                    <td>平底锅</td>
+                    <td>调味料</td>
                     <td>米饭＋海苔＋黄瓜</td>
                 </tr>
                 <tr>
